# incubator-milagro-mpc

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CPackConfig.cmake  DISCLAIMER  Dockerfile  LICENSE  NOTICE  README.md  sonar-project.properties
benchmark/: CMakeLists.txt  bench.c.in  bench.h  bench_bc_setup.c  bench_bit_commitment.c  bench_bit_commitment_ecp.c  bench_bit_commitment_muladd.c  bench_bit_commitment_setup.c  bench_d_schnorr.c  bench_factoring_zk.c  bench_factoring_zk.c.in  bench_gg20_zkp_phase3.c  bench_gg20_zkp_phase6.c  bench_ggn.c  bench_gmr.c  bench_hidden_dlog.c  bench_modulus.c  bench_mpc.c  bench_mpc.c.in  bench_mta.c  bench_mta_rp.c  bench_mta_zk.c  bench_mta_zkwc.c  bench_nm_commit.c  bench_nm_commit.c.in  bench_phase5.c  bench_schnorr.c  bench_schnorr.c.in  bench_shamir.c
cmake/: PythonParameters.cmake  PythonSiteDirs.cmake
doxygen/: CMakeLists.txt  Doxyfile.in  README.md  main.dox
examples/: CMakeLists.txt  example_bc_setup.c  example_d_schnorr.c  example_dump_keys.c  example_ecdsa.c  example_ecdsa_api.c  example_ecdsa_mpc.c  example_factoring_zk.c  example_full.c  example_gg20_full.c  example_gg20_reshare.c  example_gg20_zkp_phase3.c  example_gg20_zkp_phase6.c  example_ggn.c  example_gmr.c  example_hidden_dlog.c  example_mta.c  example_mta_rp.c  example_mta_zk.c  example_mta_zk_interactive.c  example_mta_zkwc.c  example_nm_commit.c  example_paillier.c  example_paillier_th.c  example_phase5.c  example_product.c  example_r.c  example_s.c  example_schnorr.c  example_schnorr_interactive.c  example_shamir.c
examples/cg21/: example_cg21_auxinfo.c  example_cg21_key_reshare.c  example_cg21_keygen.c  example_cg21_pi_affg.c  example_cg21_pi_affp.c  example_cg21_pi_enc.c  example_cg21_pi_factor.c  example_cg21_pi_logstar.c  example_cg21_pi_mod.c  example_cg21_pi_prm.c  example_cg21_presign.c  example_cg21_sign.c
include/: CMakeLists.txt
include/amcl/: bit_commitment.h  bit_commitment_setup.h  commitments.h  factoring_zk.h  gg20_zkp.h  ggn.h  gmr.h  hash_utils.h  hidden_dlog.h  modulus.h  mpc.h  mpc_api.h  mta.h  mta_zkp.h  nm_commitment.h  schnorr.h  shamir.h
model/: README.md
model/doc/: README.md  build.sh
model/examples/: gen_r_v1.py  gen_r_v2.py  gen_s_v1.py  gen_s_v2.py  run_bit_commitment.py  run_commitment.py  run_factorization_zk.py  run_genr_v1.py  run_mpc.py  run_mpc_v1.py  run_mpc_v2.py  run_mta.py  (+9 more)
python/: CMakeLists.txt  README.md  amcl_mpc.py  amcl_schnorr.py  bench_mpc.py  example_dump_keys.py  example_ecdsa.py  example_mta.py  example_r.py  example_s.py  test_ecdsa.py  test_mta.py  test_r.py  test_s.py  test_schnorr.py
python/amcl/: CMakeLists.txt  aes.py  bit_commitment.py  bls.py  commitments.py  core_utils.py  factoring_zk.py  gg20_zkp.py  ggn.py  gmr.py  mpc.py  mta_zkp.py  nm_commitment.py  rsa.py.in  schnorr.py  shamir.py
python/benchmark/: CMakeLists.txt  bench.py  bench_aes.py  bench_bc_setup.py  bench_gg20_zkp.py  bench_gmr.py  bench_mta.py  bench_nm_commit.py  bench_rsa.py.in  bench_schnorr.py  bench_shamir.py  bench_zk_factoring.py
python/examples/: CMakeLists.txt  context.py  example_aes.py  example_bc_setup.py  example_bls.py  example_dump_keys.py  example_ecdsa.py  example_full.py  example_gg20_zkp.py  example_gmr.py  example_mta.py  example_nm_commit.py  example_r.py  example_rsa.py.in  example_s.py  example_schnorr.py  example_shamir.py  example_zk_factoring.py
python/test/: CMakeLists.txt  test_aes.py  test_bc_setup.py  test_ecdsa.py  test_gg20_zkp.py  test_gmr.py  test_mta.py  test_nm_commit.py  test_r.py  test_rsa.py.in  test_s.py  test_schnorr.py  test_shamir.py  test_zk_factoring.py
scripts/: build.sh  buildAMCL.sh  build_amcl.sh  coverage.sh  delete.sh  docker.sh  kill.sh  test.sh
src/: CMakeLists.txt  bit_commitment.c  bit_commitment_setup.c  commitments.c  factoring_zk.c  gg20_zkp.c  ggn.c  gmr.c  hash_utils.c  hidden_dlog.c  modulus.c  mpc.c  mpc_api.c  mta.c  mta_zkp.c  nm_commitment.c  schnorr.c  shamir.c
src/cg21/: cg21_aux.c  cg21_keygen.c  cg21_pi_factor.c  cg21_pi_mod.c  cg21_pi_prm.c  cg21_presign.c  cg21_reshare.c  cg21_rp_pi_affg.c  cg21_rp_pi_affp.c  cg21_rp_pi_enc.c  cg21_rp_pi_logstar.c  cg21_sign.c  cg21_utilities.c
test/: CMakeLists.txt  test.c  test.h
test/smoke/: CMakeLists.txt  test_bc_setup_smoke.c  test_bit_commitment_muladd_smoke.c  test_bit_commitment_setup_smoke.c  test_bit_commitment_smoke.c  test_d_schnorr_smoke.c  test_deterministic_k.c  test_dump_keys_smoke.c  test_ecdsa_smoke.c  test_factoring_zk_smoke.c  test_gg20_zkp_phase3_smoke.c  test_gg20_zkp_phase6_smoke.c  test_ggn_smoke.c  test_gmr_smoke.c  test_hidden_dlog_smoke.c  test_mta_rp_smoke.c  test_mta_smoke.c  test_mta_zk_interactive_smoke.c  test_mta_zk_smoke.c  test_mta_zkwc_smoke.c  test_nm_commit_smoke.c  test_phase5_smoke.c  test_r_smoke.c  test_s_smoke.c  test_schnorr_interactive_smoke.c  test_schnorr_smoke.c  test_shamir_smoke.c
test/unit/: CMakeLists.txt  test_bc_internals.c  test_bc_setup.c  test_bit_commitment_commit.c  test_bit_commitment_ecp_commit.c  test_bit_commitment_ecp_verify.c  test_bit_commitment_muladd_commit.c  test_bit_commitment_muladd_octets.c  test_bit_commitment_muladd_prove.c  test_bit_commitment_muladd_verify.c  test_bit_commitment_octets.c  test_bit_commitment_prove.c  test_bit_commitment_setup.c  test_bit_commitment_setup_internals.c  test_bit_commitment_verify.c  test_d_schnorr_challenge.c  test_d_schnorr_commit.c  test_d_schnorr_prove.c  test_d_schnorr_verify.c  test_factoring_zk_prove.c  test_factoring_zk_verify.c  test_gg20_zkp_generator.c  test_gg20_zkp_octets.c  test_gg20_zkp_phase3_challenge.c  test_gg20_zkp_phase3_commit.c  test_gg20_zkp_phase3_prove.c  test_gg20_zkp_phase3_verify.c  test_gg20_zkp_phase6_challenge.c  test_gg20_zkp_phase6_commit.c  test_gg20_zkp_phase6_prove.c  test_gg20_zkp_phase6_verify.c  test_ggn.c  test_gmr_octets.c  test_gmr_prove.c  test_gmr_verify.c  test_hidden_dlog_challenge.c  test_hidden_dlog_commit.c  test_hidden_dlog_prove.c  test_hidden_dlog_verify.c  test_mta.c  (+31 more)
vagrant/: README.md  Vagrantfile  bootstrap.sh
(+188 files in other folders)
